vlib/v/checker/tests/return_void_type_err.vv
fn hello(msg string) ? {
	return println(msg)
}

fn main() {
	hello('test')?
}
